# advent-of-code-2020

./: .gitignore  README.md  comb.py  day1.scm  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day17_part2.py  day18_p1.py  day18_p2.py  day19.py  day2.scm  day20.py  day20_fail_but_pretty.py  day21.py  day22.py  day23.py  day23.rs  day24.py  day3.scm  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
day10rs/: Cargo.toml
day10rs/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
